# ytu_arsiv_readme_olusturma

./: .gitignore  AGENT.md  README.md  arayuz.bat  arayuz.sh  arayuz_cmdsiz.bat  arayuz_cmdsiz.sh  build.bat  build.sh  google_form_guncelle.bat  json_depo_bilgileri.txt  pyproject.toml  readme_olustur.py  rutin_kontrol.bat  rutin_kontrol.sh  surum_cikar.py
.github/workflows/: release_build.yml
google_forum_islemleri/: README.md  ders_adlari_olustur.py  ders_icerikleri_guncelle.py  google_form_rutin_kontrol.py  hoca_adlari_olustur.py  hoca_icerikleri_guncelle.py  icerik_kontrol.py  karaliste.txt  maas_bilgileri_yazdir.py
readme_guncelleme_arayuzu_python/: README.md  close_event.py  coklu_satir_girdi_dialog.py  degiskenler.py  ders_ekle_guncelle_window.py  donem_ekle_guncelle_window.py  giris_ekle_guncelle_window.py  git_helper.py  git_islemleri_window.py  hoca_ekle_guncelle_window.py  hoca_kisaltma_olustur.py  katkida_bulunan_ekle_window.py  katkida_bulunanlari_duzenle_window.py  konfigurasyon_window.py  main.py  metin_islemleri.py  progress_dialog.py  repo_kullanimi_window.py  screen_utils.py  stil.qss  surum_yonetimi.py  threadler.py  yazarin_notlari_duzenle_window.py
readme_guncelleme_arayuzu_python/helpers/: __init__.py
spec_dosyalari/: main.spec
writers/: ders_klasor_writer.py  dersler_writer.py  donem_writer.py  hocalar_writer.py  yardimci.py
